BJS2-78371 parallel save hash